# odoorun

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/odoorun/: __init__.py  __main__.py  cli.py  discovery.py  runner.py
src/odoorun/commands/: __init__.py  addon.py  common.py  db.py  postgres.py  table.py
src/odoorun/completion/: command.py  database.py  engine.py  module.py  shell.py
tests/: test_cli.py  test_completion.py  test_discovery.py  test_management_commands.py  test_module_completion.py  test_runner.py
