[project]
name = "odoorun"
version = "1.0.0"
description = "A modern CLI for running and managing Odoo projects."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Khalid A. Dev", email = "khalid.a.dev@gmail.com" }]
requires-python = ">=3.10"
keywords = ["cli", "odoo"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "rich>=15.0.0",
    "typer>=0.26.8",
]

[project.urls]
Homepage = "https://github.com/khalid99io/odoorun"
Repository = "https://github.com/khalid99io/odoorun"
Issues = "https://github.com/khalid99io/odoorun/issues"

[project.scripts]
odoorun = "odoorun.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
